[package]
name = "cyber-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
#the whole point
#, default-features = false, features = ["bevy_gltf", "bevy_core_pipeline", "animation", "dynamic_linking", "tonemapping_luts", "bevy_sprite", "bevy_window", "png"]
bevy = { version = "0.15", features = ["jpeg"]}
bevy-inspector-egui="0.28"
smooth-bevy-cameras = "0.13"
#used for menu
bevy_egui = "0.31.1"
#used for easy orbit camera
#bevy_panorbit_camera = {version="0.20.1", features = ["bevy_egui"]}


[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
#particular optimization for wasm
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


#this library features
[features]
#default (support for x11)
default = ["x11", "wayland"]
#support for x11
x11 = ["bevy/x11"]
#support for wayland
wayland = ["bevy/wayland"]
dynamic_linking = ["bevy/dynamic_linking"]

