[package]
name = "cyber-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
#the whole point
bevy = { version = "0.15", default-features = false, features = ["bevy_gltf", "bevy_core_pipeline", "animation", "dynamic_linking", "tonemapping_luts", "bevy_sprite", "bevy_window", "jpeg", "png", "multi_threaded"]}
#useful for debugging
bevy-inspector-egui="0.28"
#used for menu
bevy_egui = "0.31.1"
#used for easy orbit camera
#bevy_panorbit_camera = {version="0.20.1", features = ["bevy_egui"]}


[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "debuginfo"

#particular optimization for wasm
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


#this library features
[features]
#default (enable all features by default)
default = ["x11", "wayland", "dynamic_linking"]
#support for x11
x11 = ["bevy/x11"]
#support for wayland
wayland = ["bevy/wayland"]
dynamic_linking = ["bevy/dynamic_linking"]


#patches for zune jpeg
[patch.crates-io]
zune-jpeg = { git = "https://github.com/etemesi254/zune-image", branch = "zune-jpeg-4.12"}

[patch."https://github.com/etemesi254/zune-image"]
zune-core = "0.4.12"